Fixing font alias issue on video pages in Chrome. Also fixed safari clip issue, fixed css error, reduced width of dropdown slightly to avoid overlaps
Reviewed-on: https://code.drupalcommerce.org/294
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/modules/commerce_kickstart/commerce_kickstart_help/help/commerce_kickstart_help.css
+++ b/modules/commerce_kickstart/commerce_kickstart_help/help/commerce_kickstart_help.css
@@ -108,6 +108,9 @@
 }
 
 /* Getting started */
+#-getting-started {
+  -webkit-font-smoothing: antialiased;
+}
 #-getting-started .search {
   background: #ccc;
   -moz-border-radius: 3px;
@@ -125,6 +128,7 @@
   line-height: normal;
   outline: 0;
   width: 100%;
+  -webkit-font-smoothing: antialiased;
 }
 #-getting-started a.search-submit {
   background: #2F88CD;
